testdata/bad/timeToMinutesWithNoZone.ion
// Timestamp with time requires timezone.
1969-02-23T00:00
